--- a/css/style.css
+++ b/css/style.css
@@ -1,30 +1,34 @@
 
-h1{ /* make kerning crazy wide
-make it red
-make a hover */
+h1{
+  /*  make a hover,change to serif/lowercase when hover? */
 color:#ea0000;
 letter-spacing: 4px;
  text-align: center;
 }
-
 
 body {
    font-family: 'Josefin Sans', sans-serif;
    text-align: center;
  }
 
-   a:hover {
-       color: white;
-       background-color: red;
+   /* LINKS */
+
+   a:link { color: #ea0000;}
+   a:visited {color: #ea0000;}
+   a:hover { font-family: "didot", serif;
+   text-transform: uppercase;
+   font-weight: bold;
 
    }
-a:link {color: red;}
 
 #subtitle { color: gray;
   font-style: italic;
+font-weight: lighter;
 
 }
 
+div { padding: 10px
+}
 /*
 h1 {
   color: blue;
