--- a/css/test.css
+++ b/css/test.css
@@ -1,26 +1,1 @@
-
-h1{ /* make kerning crazy wide
-make it red
-make a hover */
-color:#ea0000;
-letter-spacing: 4px;
- text-align: center;
-}
-
-
-body {
-   font-family: 'Josefin Sans', sans-serif;
-   text-align: center;
- }
-
-   a:hover {
-       color: white;
-       background-color: red;
-
-   }
-a:link {color: red;}
-
-#subtitle { color: gray;
-  font-style: italic;
-  
-}
+workign on it
