--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 h1{
   /*  make a hover,change to serif/lowercase when hover? */
 color:#ea0000;
-position: sticky; /*  sticky isnt working */
+position: sticky;
 top: 20px;
 letter-spacing: 4px;
 text-align: center;
@@ -25,8 +25,6 @@ body {
    a:visited {color: #ea0000;}
    a:hover { font-family: "canterbury","didot", serif;
    text-transform: uppercase;
-
-
     }
 
 #subtitle {
@@ -34,6 +32,14 @@ body {
   font-style: italic;
  font-weight: lighter;
 }
+
+.details {
+;
+}
+
+
+
+
 
 
 /* test example----------------
