--- a/css/interviewstyle.css
+++ b/css/interviewstyle.css
@@ -6,8 +6,14 @@ h1{
   font-kerning: normal;
   font-size: 100px;
   color: white;
-
 }
+#title {  padding: 6px 8px 6px 16px;
+  text-align: justify;
+  font-family: "josefin sans", sans-serif;
+  font-weight: bold;
+  font-kerning: normal;
+  font-size: 100px;
+  color: white;}
 
 /* The sidebar menu */
 .sidenav {
@@ -21,7 +27,7 @@ h1{
     overflow-x: hidden; /* Disable horizontal scroll */
     padding-top: 20px;
     transition-property: background, border-radius;
-    transition-duration: 2s;
+    transition-duration: 1.5s;
     transition-timing-function: linear;
 }
 .sidenav:hover{
@@ -46,7 +52,7 @@ h1{
     margin-left: 160px; /* Same as the width of the sidebar */
     padding: 0px 10px;
    font-family: 'Josefin Sans', sans-serif;
-   font-size: 20px;
+   font-size: 19px;
    width: 35%;
    text-align: justify;
 }
