--- a/css/interviewstyle.css
+++ b/css/interviewstyle.css
@@ -7,6 +7,7 @@ h1{
   font-size: 100px;
   color: white;
 }
+
 #title {  padding: 6px 8px 6px 16px;
   text-align: justify;
   font-family: "josefin sans", sans-serif;
@@ -14,7 +15,10 @@ h1{
   font-kerning: normal;
   font-size: 100px;
   color: white;}
-
+#laughin {
+  color: red;
+  text-align: center;
+}
 /* The sidebar menu */
 .sidenav {
     height: 100%;
