--- a/css/mirrorme.css
+++ b/css/mirrorme.css
@@ -7,7 +7,9 @@ body {
   top: 45%;
   left: 50%;
   margin-right: -50%;
-  transform: translate(-50%, -50%)
+  transform: translate(-50%, -50%);
+  font-family: serif;
+  font size: 20px;
  }
 
 #mirror {
@@ -16,7 +18,6 @@ body {
   bottom:0px;
   left:84%;
 }
-
 /* open to a full cloud image???
 how are u: yes no
 <iframe src="demo_iframe.htm" style="border:none;"></iframe>
