--- a/css/test.css
+++ b/css/test.css
@@ -1,56 +1,45 @@
-h1{
-  padding: 6px 8px 6px 16px;
-  text-align: justify;
-  font-family: "josefin sans", sans-serif;
-  font-weight: bold;
-  font-kerning: normal;
-  font-size: 100px;
-  color: white;
+h1{ color: green;}
 
+body{
+  text-decoration: none;}
+
+#formbox {
+  color: red;
 }
 
-/* The sidebar menu */
-.sidenav {
-    height: 100%;
-    width: 160px; /* Set the width of the sidebar */
-    position: fixed;
-    z-index: 1; /* Stay on top */
-    top: 0; /* Stay at the top */
-    left: 0;
-    background-color:red;
-    overflow-x: hidden; /* Disable horizontal scroll */
-    padding-top: 20px;
-    transition-property: background, border-radius;
-    transition-duration: 2s;
-    transition-timing-function: linear;
-}
-.sidenav:hover{
-  background: white;
-}
+alert {}
 
-/* The navigation menu links */
-.sidenav a {
-    padding: 6px 8px 6px 16px;
-    text-decoration: none;
-    font-size: 25px;
-    color: #818181;
-    display: block;
-}
+
 /*
-.sidenav a:hover {
-    color: #f1f1f1;
-}
+<bdo dir="rtl">
+This text will go right-to-left.
+</bdo>
 
-/* Style page content */
-.main {
-    margin-left: 160px; /* Same as the width of the sidebar */
-    padding: 0px 10px;
-   font-family: 'Josefin Sans', sans-serif;
-   font-size: 20px;
-   width: 35%;
-   text-align: justify;
-}
+function sayHi(){
+var txtName = document.getElementById("txtName");
+var txtOutput = document.getElementById("txtOutput");
+var name = txtName.value;
+txtOutput.value = "Hi there, " + name + "!"
+} // end sayHi
+</script>
 
-.main a{color: red}
-.main a:hover{text-transform: uppercase;}
-.main a:visited {color:red}
+<link rel = "stylesheet"
+ type = "text/css"
+ href = "textBoxes.css" />
+</head>
+<body>
+<h1>Text Box Input and Output</h1>
+<form action = """>
+<fieldset>
+<label>What are you thinking about?: </label>
+<input type = "text"
+  id = "txtName" />
+<input type = "button"
+  value = "click me"
+  onclick = "sayHi()"/>
+<input type = "text"
+  id = "txtOutput" />
+</fieldset>
+</form>
+</body>
+</html>
