--- a/css/mirrorme.css
+++ b/css/mirrorme.css
@@ -1,6 +1,7 @@
 body {
   text-align: center;
-}
+  }
+div { padding: 20px;}
 
 #box {
   position: fixed;
@@ -10,7 +11,7 @@ body {
   transform: translate(-50%, -50%);
   font-family: serif;
   font size: 20px;
- }
+  }
 
 #mirror {
   width: 20%;
@@ -18,6 +19,7 @@ body {
   bottom:0px;
   left:84%;
 }
+
 /* open to a full cloud image???
 how are u: yes no
 <iframe src="demo_iframe.htm" style="border:none;"></iframe>
