--- a/css/style.css
+++ b/css/style.css
@@ -1,22 +1,19 @@
-
 h1{
-  /*  make a hover,change to serif/lowercase when hover? */
-color:#ea0000;
-position: sticky;
-top: 20px;
-letter-spacing: 4px;
-text-align: center;
-background-color: white;
-text-decoration: none;
+  color:#ea0000;
+  position: sticky;
+  top: 20px;
+  letter-spacing: 4px;
+  text-align: center;
+  background-color: white;
+  text-decoration: none;
 }
+div {padding: 10px}
 
 body {
    font-family: 'Josefin Sans', sans-serif;
    text-align: center;
  }
 
- div { padding: 10px
-}
 .title {
   color:#ea0000;
   position: sticky;
@@ -25,28 +22,28 @@ body {
   text-align: center;
   background-color: white;
   text-decoration: none;
-  display: inline
+  display: inline;
 }
-
 .title:hover {
-  font-family: "canterbury","didot", serif;
-   }
+  font-family: "canterbury","didot", serif;}
 
 /* LINKS */
-a:link { color: #ea0000;
-   text-decoration: none;}
-  a:visited {color: #ea0000;}
-  a:hover { font-family: "didot", serif;
-  text-transform: uppercase;
-    }
+a:link {
+  color: #ea0000;
+  text-decoration: none;}
+a:visited {color: #ea0000;}
+a:hover {
+    font-family: "didot", serif;
+    text-transform: uppercase; }
 
 #subtitle {
   color: gray;
   font-style: italic;
- font-weight: lighter;
-}
+  font-weight: lighter;
+  }
 
 #spacing {letter-spacing: 15px;}
+  /* to make space wider between first and last name */
 
 
 
