--- a/css/flyer.css
+++ b/css/flyer.css
@@ -1,6 +1,8 @@
 body{
   background-color: blue;
-
+  width: 90%;
+align-items: center;
+margin: 15px;
 }
 .text {
   z-index: 1;
@@ -23,8 +25,8 @@ body{
 }
 
 .child1 {
-  height: 300px;
-  width:300px;
+  height: 280px;
+  width:280px;
   border-radius: 50%;
   background-color: red;
 }
