--- a/clock/demo1.css
+++ b/clock/demo1.css
@@ -1,5 +1,35 @@
 body{
   display: flex;
   justify-content: center;
-  background-color: red;
+  align-items: center;
+  flex-direction: row;
+  background-color: black;
+}
+#clock{
+  width: 300px;
+  height: 300px;
+  background-color: black;
+  border-radius: 300px;
+  margin-top: 150px;
+}
+#sec{
+  position: relative;
+  background-color: white;
+  width: 2px;
+  height: 150px;
+  top: 0px;
+  left: 150px;
+  transform-origin: bottom;
+  transition: all .3s ease;
+}
+
+#hours{
+  position: relative;
+  background-color: white;
+  width: 2px;
+  height: 150px;
+  top: 40px;
+  left: 300px;
+  transform-origin: bottom;
+  transition: all .3s ease;
 }
