--- a/weather/weather.css
+++ b/weather/weather.css
@@ -16,6 +16,9 @@ margin-left: 10px;
   color: #33333;
   width:160px;
   height:30px;
+  position:fixed;
+  right:35px;
+  bottom: 35px;
 }
 
 #info{
