--- a/final/advice.css
+++ b/final/advice.css
@@ -1,17 +1,128 @@
 body{
-  background-image: url("images/orig.gif");
+  background-image: url("iages/bgm.gif");
   background-color:black;
-  font-family: lucida sans-serif, monospace;
+  font-family: 'VT323', monospace;
+  font-size: 24px;
   color:white;
   height: 100%;
   width: 100%;
   margin: 0;
 }
-h1{
-  text-decoration: none;
-}
-.center{
+
+#hand{
   position: absolute;
-  left:50%;
-  bottom: ;
+  padding: 10px;
+  cursor: move;
+  z-index: 10;
+  width: 290px;
+  height: auto;
+  left: 38%;
+  top: 40px;
+}
+
+#six{
+  position: absolute;
+  padding: 10px;
+  cursor: move;
+  z-index: 10;
+  width: 220px;
+  height: auto;
+  right:100px;
+  top: 39%;
+}
+
+#one{
+  position: absolute;
+  padding: 10px;
+  cursor: move;
+  z-index: 10;
+  width: auto;
+  height: 200px;
+  left: 19%;
+  top: 83px;
+  }
+
+#two{
+  position: absolute;
+  position: absolute;
+  padding: 10px;
+  cursor: move;
+  z-index: 10;
+  width: 230px;
+  height: auto;
+  left: 19%;
+  bottom: 80px;
+}
+
+#three{
+  position: absolute;
+  padding: 10px;
+  cursor: move;
+  z-index: 10;
+  width: 200px;
+  height: auto;
+  right: 20%;
+  top: 80px;
+}
+
+#four{
+  position: absolute;
+  padding: 10px;
+  cursor: move;
+  z-index: 10;
+  width: 250px;
+  height: auto;
+  left:130px;
+  top: 44%;
+}
+
+#five{
+  position: absolute;
+  padding: 10px;
+  cursor: move;
+  z-index: 10;
+  width: 170px;
+  height: auto;
+  right: 23%;
+  bottom: 73px;
+
+}
+
+#arrow{
+  position: absolute;
+  padding: 10px;
+  cursor: move;
+  z-index: 10;
+  width: 200px;
+  height: auto;
+  right: 16%;
+  bottom: 40px;
+}
+
+#snake{
+  position: absolute;
+  padding: 10px;
+  cursor: move;
+  z-index: 10;
+  width: 290px;
+  height: auto;
+  left: 38%;
+  bottom: 45px;
+
+}
+
+.content{
+  position: absolute;
+  text-align: center;
+  top: 65%;
+  left: 49%;
+  transform: translate(-50%, -50%);
+  width: 400px;
+  height: 400px;
+}
+
+.photos{
+  position: absolute;
+  width: 40%;
+  height: auto;
 }
