--- a/final/advice.css
+++ b/final/advice.css
@@ -27,6 +27,7 @@ button{
    color: white;
    font-family: 'VT323', monospace;
    font-size: 20px;
+   cursor:pointer;
 }
 
 button:hover{
@@ -36,7 +37,7 @@ button:hover{
 #hand{
   position: absolute;
   padding: 10px;
-  cursor: move;
+  cursor: grab;
   z-index: 10;
   width: 290px;
   height: auto;
@@ -47,7 +48,7 @@ button:hover{
 #six{
   position: absolute;
   padding: 10px;
-  cursor: move;
+  cursor: grab;
   z-index: 10;
   width: 220px;
   height: auto;
@@ -58,7 +59,7 @@ button:hover{
 #one{
   position: absolute;
   padding: 10px;
-  cursor: move;
+  cursor: grab;
   z-index: 10;
   width: auto;
   height: 200px;
@@ -70,7 +71,7 @@ button:hover{
   position: absolute;
   position: absolute;
   padding: 10px;
-  cursor: move;
+  cursor: grab;
   z-index: 10;
   width: 230px;
   height: auto;
@@ -81,7 +82,7 @@ button:hover{
 #three{
   position: absolute;
   padding: 10px;
-  cursor: move;
+  cursor: grab;
   z-index: 10;
   width: 200px;
   height: auto;
@@ -92,7 +93,7 @@ button:hover{
 #four{
   position: absolute;
   padding: 10px;
-  cursor: move;
+  cursor: grab;
   z-index: 10;
   width: 250px;
   height: auto;
@@ -103,7 +104,7 @@ button:hover{
 #five{
   position: absolute;
   padding: 10px;
-  cursor: move;
+  cursor: grab;
   z-index: 10;
   width: 170px;
   height: auto;
@@ -115,7 +116,7 @@ button:hover{
 #arrow{
   position: absolute;
   padding: 10px;
-  cursor: move;
+  cursor: grab;
   z-index: 10;
   width: 200px;
   height: auto;
@@ -126,7 +127,7 @@ button:hover{
 #snake{
   position: absolute;
   padding: 10px;
-  cursor: move;
+  cursor: grab;
   z-index: 10;
   width: 290px;
   height: auto;
