--- a/final/one.css
+++ b/final/one.css
@@ -5,12 +5,14 @@ body{
   height: 100%;
   width: 100%;
   margin: 0;
+  cursor:alias;
 }
 
 .pix{
   height: 100%;
   width: 100%;
   margin: 0;
+  cursor:alias;
   }
 
 .photos{
